--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "aws-cloudfront-sign",
+  "name": "@classuper/aws-cloudfront-sign",
   "version": "2.2.0",
   "description": "Utility module for signing AWS CloudFront URLs",
-  "author": "Jason Sims <sims.jrobert@gmail.com>",
+  "author": "Alexey Kucherenko <alexei.kucherenko@gmail.com>",
   "contributors": [
+    {
+      "name": "Jason Sims",
+      "email": "sims.jrobert@gmail.com"
+    },
     {
       "name": "Matt Palmerlee"
     }
@@ -14,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jasonsims/aws-cloudfront-sign.git"
+    "url": "https://github.com/classuper/aws-cloudfront-sign.git"
   },
   "keywords": [
     "aws",
@@ -23,7 +27,7 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jasonsims/aws-cloudfront-sign/issues"
+    "url": "https://github.com/classuper/aws-cloudfront-sign/issues"
   },
   "tonicExampleFilename": "./examples/signedURL.js",
   "devDependencies": {
